--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -14,7 +14,8 @@
 
 	<properties>
 		<org.apache.httpcomponents-version>4.3.5.1</org.apache.httpcomponents-version>
-		<com.squareup.okhttp-version>2.4.0</com.squareup.okhttp-version>
+		<com.squareup.okhttp3-version>3.2.0</com.squareup.okhttp3-version>
+		<com.squareup.okhttp-version>2.7.5</com.squareup.okhttp-version>
 		<com.fasterxml.jackson.core-version>2.5.4</com.fasterxml.jackson.core-version>
 		<com.google.code.gson-version>2.3.1</com.google.code.gson-version>
 		<org.simpleframework-version>2.7.1</org.simpleframework-version>
@@ -31,6 +32,11 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient-android</artifactId>
 			<version>${org.apache.httpcomponents-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp-urlconnection</artifactId>
+			<version>${com.squareup.okhttp3-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.okhttp</groupId>
