--- a/test/spring-android-rest-template-test/pom.xml
+++ b/test/spring-android-rest-template-test/pom.xml
@@ -35,12 +35,12 @@
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.okhttp3</groupId>
-			<artifactId>okhttp-urlconnection</artifactId>
+			<artifactId>okhttp</artifactId>
 			<version>${com.squareup.okhttp3-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup.okhttp</groupId>
-			<artifactId>okhttp-urlconnection</artifactId>
+			<artifactId>okhttp</artifactId>
 			<version>${com.squareup.okhttp-version}</version>
 		</dependency>
 		<dependency>
