--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,16 @@ buildscript {
 configure(allprojects) {
 	group = "org.springframework.android"
 
-	ext.androidVersion           = "4.1.1.4"
-	ext.springSocialVersion      = "1.1.4.RELEASE"
-	ext.springSecurityVersion    = "3.1.3.RELEASE"
-	ext.jackson2Version          = "2.7.2"
-	ext.gsonVersion              = "2.6.2"
-	ext.simpleXmlVersion         = "2.7.1"
-	ext.okHttp3Version           = "3.2.0"
-	ext.okHttpVersion            = "2.7.5"
-	ext.httpclientVersion        = "4.3.5.1"
-	ext.gradleScriptDir          = "${rootProject.projectDir}/gradle"
+	ext.androidVersion               = "4.1.1.4"
+	ext.springSocialVersion          = "1.1.4.RELEASE"
+	ext.springSecurityCryptoVersion  = "3.2.9.RELEASE"
+	ext.jackson2Version              = "2.7.2"
+	ext.gsonVersion                  = "2.6.2"
+	ext.simpleXmlVersion             = "2.7.1"
+	ext.okHttp3Version               = "3.2.0"
+	ext.okHttpVersion                = "2.7.5"
+	ext.httpclientVersion            = "4.3.5.1"
+	ext.gradleScriptDir              = "${rootProject.projectDir}/gradle"
 
 	apply plugin: 'propdeps'
 	apply plugin: 'propdeps-maven'
@@ -144,7 +144,7 @@ project("spring-android-auth") {
 			// exclude spring-web in favor of spring-android-rest-template
 			exclude group: "org.springframework", module: "spring-web"
 		}
-		compile("org.springframework.security:spring-security-crypto:$springSecurityVersion") { dep ->
+		compile("org.springframework.security:spring-security-crypto:$springSecurityCryptoVersion") { dep ->
 			transitive = false
 		}
 	}
