--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ name: Spring for Android
 project: spring-android
 
 # Project github URL
-github_repo_url: http://github.com/spring-projects/spring-android
+github_repo_url: https://github.com/spring-projects/spring-android
 
 # If you want to include a custom pom.xml or gradle template set these value to true and add _include files
 custom_pom_template: false
@@ -29,6 +29,6 @@ custom_gradle_template: false
 
 ### The following properties are constant for most projects
 
-main_site_url: http://spring.io
-projects_site_url: http://projects.spring.io
-questions_url: http://spring.io/questions
+main_site_url: https://spring.io
+projects_site_url: https://projects.spring.io
+questions_url: https://spring.io/questions
